--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,33 @@
 body {
-  background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
+  background: #343541;
   font-family: Arial, sans-serif;
   text-align: center;
 }
-div {
+
+div,
+h1 {
+  color: white;
+}
+
+button {
+  background: #4b4f56;
   color: white;
 }
 
 .frontside,
 .backside {
   position: absolute;
-  width: 50%;
-  height: 50%;
+  width: 25%;
+  height: 60%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 24px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  font-size: 30px;
+  border-radius: 15%;
   backface-visibility: hidden;
   transition: transform 0.6s;
-  background: black;
+  background: #4b4f56;
 }
