--- a/styles.css
+++ b/styles.css
@@ -15,14 +15,16 @@ h1 {
 }
 
 #messageContainer {
-  position: fixed; /* This keeps the element fixed relative to the viewport */
-  top: 50%; /* Adjust as needed to position vertically */
-  right: 20%; /* Adjust as needed to position horizontally */
+  position: relative;
+  top: 50%; 
+  right: 20%; 
   transform: translate(0, -50%);
   font-size: 35px;
 }
 
 button {
+  position: relative;
+  top: 320px;
   background: #4b4f56;
   color: #ff7f50;
   border-radius: 8px;
@@ -49,7 +51,7 @@ button {
 }
 
 .inputGroup label {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 5px;
   transform: translateY(-50%);
@@ -75,19 +77,17 @@ button:hover {
 
 .frontside,
 .backside {
-  position: absolute;
-  width: 25%;
-  height: 60%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
+  position: relative;
+  transform: translate(0, 50%);
+  font-size: 40px;        
   border-radius: 15%;
   backface-visibility: hidden;
   transition: transform 0.6s;
   background: #4b4f56;
-  font-size: 40px;
+  align-items: center;    
+  justify-content: center;       
+}
+
+.frontside{
+  background: white;
 }
