--- a/styles.css
+++ b/styles.css
@@ -22,15 +22,30 @@ h1 {
   font-size: 35px;
 }
 
+#browseButtons {
+  margin-top: 30px;
+}
+
+#browseButtons div {
+  display: inline;
+  cursor: pointer;
+}
+
+#browseButtons div:nth-child(1) {
+  margin-right: 20px;
+}
+
 button {
   position: relative;
-  top: 320px;
-  background: #4b4f56;
+  margin-top: 30px;
+  background: 
+  #4b4f56;
   color: #ff7f50;
   border-radius: 8px;
+  width: 140px;
+  height: 50px;
   border: none;
   cursor: pointer;
-  padding: 20px;
   font-size: 16px;
   font-family: fontti, Arial, sans-serif;
 }
@@ -42,7 +57,7 @@ button {
 
 .inputGroup input {
   width: 250px;
-  height: 70px;
+  height: 120px;
   font-size: 16px;
   color: #fff;
   background: transparent;
@@ -75,17 +90,27 @@ button:hover {
   color: #ffffff;
 }
 
-.frontside,
-.backside {
-  position: relative;
-  transform: translate(0, 50%);
+#flashcard {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#flashcard div {
+  width: 500px;
+  height: 150px;
   font-size: 40px;        
-  border-radius: 15%;
+  border-radius: 20px;
+  margin-top: 30px;
+  line-height: 150px;
+  text-align: center;
   backface-visibility: hidden;
   transition: transform 0.6s;
+  justify-content: center;     
+}
+
+.backside {
   background: #4b4f56;
-  align-items: center;    
-  justify-content: center;       
 }
 
 .frontside{
